--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,4 +1,29 @@
+# FROM python:3.10-slim
+
+# WORKDIR /app
+
+# COPY requirements.txt .
+# RUN pip install --no-cache-dir -r requirements.txt
+
+# COPY . .
+
+# CMD ["gunicorn", "-b", "0.0.0.0:8080", "app:app"]
+
 FROM python:3.10-slim
+
+# System dependencies for OCR, PDF, Image, Audio
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    tesseract-ocr \
+    poppler-utils \
+    ffmpeg \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    libjpeg-dev \
+    zlib1g-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -6,5 +31,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+ENV PORT=8080
+EXPOSE 8080
 
 CMD ["gunicorn", "-b", "0.0.0.0:8080", "app:app"]
