--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -6,14 +6,14 @@ cachetools==6.2.4
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
-click==8.3.1
+# click==8.3.1
 colorama==0.4.6
 cryptography==46.0.3
 distro==1.9.0
 firebase_admin==7.1.0
 Flask==3.1.2
 flask-cors==6.0.2
-google-ai-generativelanguage==0.6.15
+
 
 google-api-python-client==2.187.0
 google-auth==2.45.0
@@ -23,7 +23,8 @@ google-cloud-firestore==2.22.0
 google-cloud-storage==3.7.0
 google-crc32c==1.8.0
 google-genai==1.56.0
-google-generativeai==0.8.6
+google-cloud-speech>=2.26.0
+
 google-resumable-media==2.8.0
 googleapis-common-protos==1.72.0
 grpcio==1.76.0
